# infoseq_lab1

./: .flake8  .gitignore  README.md  REPORT.md  app.py  init_db.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_app.py
